<resources>
    <string name="app_name">DemonAndAndroid</string>
    <string name="app_title">Demon \u0026 Android</string>
    <string name="main_btn_calc">Calculator</string>
    <string name="main_btn_2048">2048</string>
    <string name="main_btn_anim">Animation</string>
    <string name="main_btn_chat">Chat</string>
    <string name="btn_tmp_text">Your text</string>
    <string name="app_test">:)</string>

    <!-- region Calc -->
    <string name="calc_tv_title">Calculator</string>
    <string name="calc_btn_percent">%</string>
    <string name="calc_btn_ce">CE</string>
    <string name="calc_btn_c">C</string>
    <string name="calc_btn_backspace">\u232B</string>
    <string name="calc_btn_inverse">\u00B9\u2215\u2093</string>
    <string name="calc_btn_square">x\u00B2</string>
    <string name="calc_btn_sqrt">\u00B2\u221A\u2179</string>
    <string name="calc_btn_divide">\u00F7</string>
    <string name="calc_btn_multiple">\u00D7</string>
    <string name="calc_btn_minus">-</string>
    <string name="calc_btn_add">+</string>
    <string name="calc_btn_dot">.</string>
    <string name="calc_btn_negative">\u207A\u2215\u208B</string>
    <string name="calc_btn_equals">=</string>


    <string name="calc_btn_digit_0">0</string>
    <string name="calc_btn_digit_1">1</string>
    <string name="calc_btn_digit_2">2</string>
    <string name="calc_btn_digit_3">3</string>
    <string name="calc_btn_digit_4">4</string>
    <string name="calc_btn_digit_5">5</string>
    <string name="calc_btn_digit_6">6</string>
    <string name="calc_btn_digit_7">7</string>
    <string name="calc_btn_digit_8">8</string>
    <string name="calc_btn_digit_9">9</string>

    <string name="calc_msg_too_long">Too many digits</string>


    <!-- endregion -->

    <!-- region 2048 -->

    <string name="g2048_tile_digit_2">2</string>
    <string name="g2048_tile_digit_4">4</string>
    <string name="g2048_tile_digit_8">8</string>
    <string name="g2048_tile_digit_16">16</string>
    <string name="g2048_tile_digit_32">32</string>
    <string name="g2048_tile_digit_64">64</string>
    <string name="g2048_tile_digit_128">128</string>
    <string name="g2048_tile_digit_256">256</string>
    <string name="g2048_tile_digit_512">512</string>
    <string name="g2048_tile_digit_1024">1024</string>
    <string name="g2048_tile_digit_2048">2048</string>

    <string name="g2048_tv_score">SCORE\n%s</string>
    <string name="g2048_tv_best">BEST\n%s</string>
    <string name="g2048_btn_new">NEW</string>
    <string name="g2048_btn_undo">UNDO</string>
    <string name="g2048_tv_hint">Get 2048!</string>

    <!-- endregion -->

    <!-- region Anim -->

    <string name="anim_tv_alpha">Alpha</string>
    <string name="anim_tv_scale">Scale</string>
    <string name="anim_tv_rotate">Rotate</string>
    <string name="anim_tv_translate">Translate</string>
    <string name="anim_tv_combo">Combo</string>
    <string name="anim_tv_bell">Bell</string>

    <!-- endregion -->

    <!-- region Chat -->

    <!-- endregion -->

</resources>